Add cross-platform account deletion
